--- a/buy credits/index.htm
+++ b/buy credits/index.htm
@@ -174,7 +174,19 @@
                 <h2 class="trust-text">Trusted by over 5 lakhs+ companies</h2>
                 <p class="click2-text">Businesses across industries and around India have built better customer relationships with apna.</p>
              </div>
-
+             <div class="banner-container">
+                <img src="bigbasket.png" class="banner-image" alt="Banner 1">
+                <img src="HDFC-Bank.png" class="banner-image" alt="Banner 2">
+                <img src="uber.jpeg" class="banner-image" alt="Banner 3">
+                <img src="Zomato.png" class="banner-image" alt="Banner 4">
+                <img src="urban company.jpeg" class="banner-image" alt="Banner 5">
+                <img src="paytm.jpeg" class="banner-image" alt="Banner 6">
+                <img src="axis  bank.jpeg" class="banner-image" alt="Banner 7">
+                <img src="tech mahindra.jpeg" class="banner-image" alt="Banner 8">
+                <img src="flipkart.jpeg" class="banner-image" alt="Banner 9">
+                <img src="aditya birla capital.jpeg" class="banner-image" alt="Banner 10">
+                <img src="bajaj.jpeg" class="banner-image" alt="Banner 11">
+            </div>
         
     </main>
 </body>
